--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 <body>
-
 <%= yield %>
 
 </body>
