--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,1 +1,7 @@
 <h3>Hello world! <span class="label label-default">Bootstrap test</span></h3>
+<% unless user_signed_in? %>
+    <%= link_to 'Sign in', "user/sign_in" %> |
+    <%= link_to 'Sign up', "user/sign_up" %> |
+<% else %>
+    <%= link_to("Logout", destroy_user_session_path, :method => :delete) %>
+<% end %>
