Small design and refactoring

--- a/app/views/admin/home.html.erb
+++ b/app/views/admin/home.html.erb
@@ -1,4 +1,1 @@
-Welcome to Admin page
-<% if user_signed_in? || admin_signed_in? %>
-    <%= link_to("Logout", destroy_admin_session_path, :method => :delete) %>
-<% end %>
+<center><h3>Admin Page</h3></center>
