--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <title>Blog</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 <body>
-<%= yield %>
-
+<div class="row">
+  <div class="container">
+    <div class="navbar" style="margin-top: 5px;">
+      <div class="navbar-inner">
+        <a class="brand" href="/">Blog</a>
+        <ul class="nav pull-right">
+          <% if user_signed_in? || admin_signed_in?%>
+            <% if admin_signed_in? %>
+              <li><a href="/home">Admin page</a></li>
+            <% end %>
+            <li><%= link_to("Logout", destroy_user_session_path, :method => :delete) %></li>
+          <% else %>
+            <li><a href="user/sign_up">Sign up</a></li>
+            <li><a href="user/sign_in">Sign in</a></li>
+          <% end %>
+          </ul>
+      </div>
+    </div>
+    <div class="row-fluid">
+      <div class="span2" style="background-color: #eaeaea; border-radius: 5px; margin-top: -17px;">
+        <!--Sidebar content-->
+      </div>
+      <div class="span10" style="background-color: #ececec; border-radius: 5px; margin-top: -17px;">
+        <%= yield %>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
