--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,10 @@
         <ul class="nav pull-right">
           <% if user_signed_in? || admin_signed_in?%>
             <% if admin_signed_in? %>
+              <li><%= link_to("Users", users_path) %></li>
               <li><a href="/home">Admin page</a></li>
             <% end %>
+            <li><%= link_to "My account", current_user %></li>
             <li><%= link_to("Logout", destroy_user_session_path, :method => :delete) %></li>
           <% else %>
             <li><a href="user/sign_up">Sign up</a></li>
