--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,14 +17,14 @@
         <ul class="nav pull-right">
           <% if user_signed_in? || admin_signed_in?%>
             <% if admin_signed_in? %>
-              <li><%= link_to("Users", users_path) %></li>
+              <li><%= link_to "Users", users_path %></li>
               <li><a href="/home">Admin page</a></li>
             <% end %>
-            <li><%= link_to "My account", current_user unless admin_signed_in? %></li>
+            <li><%= link_to "#{current_user.name || current_user.email}", current_user unless admin_signed_in? %></li>
             <li><%= link_to("Logout", destroy_user_session_path, :method => :delete) %></li>
           <% else %>
-            <li><a href="user/sign_up">Sign up</a></li>
-            <li><a href="user/sign_in">Sign in</a></li>
+            <li><%= link_to "Sign up", new_user_registration_path %></li>
+            <li><%= link_to "Sign in", new_user_session_path %></li>
           <% end %>
           </ul>
       </div>
