--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
+<%= link_to "Edit my profile", edit_user_registration_path, :class => 'btn btn-small' %><br/>
 Email: <%= @user.email %></br>
 Name:  <%= @user.name %>
