--- a/app/views/admin/home.html.erb
+++ b/app/views/admin/home.html.erb
@@ -1,1 +1,3 @@
-<center><h3>Admin Page</h3></center>
+<center><h3>Admin Page</h3>
+<%= link_to 'Create posts', new_post_path, :class => "btn btn-primary" %>
+</center>
