--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,7 @@
 p, h1, h2, h3, h4, h5, h6, a {
     margin: 0;
     padding: 0;
+    font-family: 'Philosopher', sans-serif;
 }
 h1, h2, h3, h4, h5, h6{
     font-weight: normal;
