--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,8 @@
 <div id="users"><% @users.each do |user| %>
   <%= user.id %>
   <%=link_to user.email, user %>
+  <%= link_to "Delete", user, :class => 'right', method: :delete,
+                                                 data: { confirm: "You sure?" } %>
   <br/>
 <% end %>
 </div>
