--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,8 @@
 <h4><%= @post.title %></h4>
 <%= @post.text %>
+ </br>
+<hr>
+    <%  for comment in @post.comments  %>
+        <%= comment.comment  %><br/>
+    <% end %>
+<%= render 'comments/form' if user_signed_in? || admin_signed_in? %>
