--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -3,11 +3,11 @@
         <div class="post-container">
           <%=link_to post.title, post %><br/>
           <%= post.text %><br/>
-          Tags: <%= raw post.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
+          Category: <%= raw post.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
 
           <%= link_to "Delete",post, :class => 'right', method: :delete,
                     data: { confirm: "You sure?" } if current_admin %><br/>
-          Created: <%= time_ago_in_words(post.created_at) %> ago.<br/>
+          <small class="muted"><div class="right">Created: <%= time_ago_in_words(post.created_at) %> ago.</div></small><br/>
 
           <% if (Date.today.day == post.created_at.to_date.day)%>
               <span class="label">New</span>
