--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <h4><%= @post.title %></h4>
-<%= @post.text %>
+<%= @post.text.html_safe %>
 <hr>
 <%  for comment in @post.comments  %>
     <div class="well well-small">
