--- a/app/views/page/_posts.html.erb
+++ b/app/views/page/_posts.html.erb
@@ -12,7 +12,7 @@
         <% if (Date.today.day == post.created_at.to_date.day)%>
             <span class="label">New</span>
         <% end %>
-        <div class="muted"><small>Comment: <%= post.comments.count %></small></div>
+        <small><i class="icon-comment muted"> <%= post.comments.count %></i></small>
       </div>
       <br/>
   <% end %>
