Include view counter

--- a/app/views/page/_posts.html.erb
+++ b/app/views/page/_posts.html.erb
@@ -13,6 +13,7 @@
             <span class="label">New</span>
         <% end %>
         <small><i class="icon-comment muted"> <%= post.comments.count %></i></small>
+        <small><i class="icon-eye-open muted"> <%= post.impression_count %></i></small>
       </div>
       <br/>
   <% end %>
