--- a/app/views/admin/home.html.erb
+++ b/app/views/admin/home.html.erb
@@ -1,3 +1,5 @@
 <center><h3>Admin Page</h3>
 <%= link_to 'Create posts', new_post_path, :class => "btn btn-primary" %>
+<%= link_to 'Create new club', new_club_path, :class => "btn btn-primary" %>
+  <%= link_to 'All club', clubs_path, :class => "btn btn-primary" %>
 </center>
