--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,7 +7,7 @@
         <%= post.text_field :title, :autofocus => true %></div>
 
       <div><%= post.label :tag_list, "Tags" %><br />
-        <%= post.select :tag_list, Post::TAGS %></div>
+        <%= post.collection_select(:tag_list, @club_list, :clubname, :uniq_title, :include_blank => false) %></div>
 
       <div><%= post.label :text %><br />
         <%= post.cktext_area :text, :cols => 40, :ckeditor => {:toolbar => "mini"} %></div>
