--- a/app/views/admin/_post.html.erb
+++ b/app/views/admin/_post.html.erb
@@ -5,10 +5,10 @@
         <th style="width:5%">ID:</th>
         <th style="width:20%">Title:</th>
         <th style="width:15%">Category:</th>
-        <th style='width:15%'>Created:</th>
+        <th style='width:15%'>Created: <i class="icon-time muted"></i></th>
         <th style="width:13%">Comments: <i class="icon-comment muted"></i></th>
         <th style="width:20%">Visits: <i class="icon-eye-open muted"></i></th>
-        <th>Actions:</th>
+        <th>Actions: <i class=" icon-wrench muted"></i></th>
       </tr>
       </thead>
       <% @posts.each do |post| %>
