Refactoring admin area

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,8 +1,7 @@
 // Place all the styles related to the page controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.container-admin{
+.admin-header{
   padding: 1%;
-  background-color: #d0d0d0;
   border: solid 1px #9e9e9e;
 }
