--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<% if user_signed_in? %>
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
@@ -31,3 +32,22 @@
 <p>Unhappy? <%= link_to "Delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'btn btn-danger' %></p>
 
 <%= link_to "Back", :back %>
+<% elsif(admin_signed_in?) %>
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+        <%= devise_error_messages! %>
+
+        <div><%= f.label :password %> <i>(New password)</i><br />
+          <%= f.password_field :password, :autocomplete => "off" %></div>
+
+        <div><%= f.label :password_confirmation %><i>(Confirmation new password)</i><br />
+          <%= f.password_field :password_confirmation %></div>
+
+        <div><%= f.label :current_password %> <i>(Your current password)</i><br />
+          <%= f.password_field :current_password %></div>
+
+        <div><%= f.submit "Update" %></div>
+    <% end %>
+<% end %>
+
