--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,3 +35,9 @@ h1, h2, h3, h4, h5, h6{
 h1{
     font-size: 1.5em;
 }
+.banned{
+    width: 100%;
+    height: 10%;
+    background-color: rgba(161, 0, 0, 0.74);
+    padding: 1%;
+}
