--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,7 @@
           <th style="width:20%">Name:</th>
           <th style="width:15%">Email:</th>
           <th style='width:15%'>Created: <i class="icon-time muted"></i></th>
+          <th style="width:10%">Banned:<i class=" icon-wrench muted"></i></th>
           <th>Actions: <i class=" icon-wrench muted"></i></th>
         </tr>
         </thead>
@@ -18,6 +19,14 @@
               <td><%= link_to user.name, user %></td>
               <td><%= user.email %></td>
               <td><%= user.created_at.to_date %></td>
+              <td>
+                <% if user.banned == false %>
+                    <%= link_to 'Ban',  user_path(user, :banned => true), :method => :put %>
+                <% elsif(user.banned == true) %>
+                    <%= link_to 'Unban',  user_path(user, :banned => false), :method => :put %>
+                    <span class="label label-important">Banned</span>
+                <% end %>
+              </td>
               <td>
                 <%= link_to "Delete",user, method: :delete,
                             data: { confirm: "You sure?" } %>
