--- a/app/views/layouts/_header_admin.html.erb
+++ b/app/views/layouts/_header_admin.html.erb
@@ -5,4 +5,8 @@
       <%= link_to 'Users', users_path, :class=>'btn' %>
       <%= link_to 'Admins', home_path, :class=>'btn' %>
     </div>
+    <div class="right">
+      <%= link_to 'New club', new_club_path, :class => 'right btn' if request.fullpath == "/clubs"  %>
+      <%= link_to 'New posts', new_post_path, :class => 'right btn' if request.fullpath == "/posts"  %>
+    </div>
 </div>
