--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
   <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+  <%= javascript_include_tag "ckeditor/init" %>
 </head>
 <body>
 <div class="row">
