--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,15 @@
 <%= render 'layouts/header_admin' %>
+<div style="padding-top: 2%">
+  <%= form_tag posts_path, :method => 'get' do %>
+      <%= text_field_tag :search, nil, :placeholder => "Search posts..." %>
+      <div class="btn-group" style="margin-top: -10px;">
+        <%= submit_tag "Search", :name => nil, :class=>'btn btn-small' %>
+        <%= link_to 'Reset', posts_path, :class=> 'btn btn-small btn-danger' %>
+      </div>
+  <% end %>
+  <%= "Found: #{@posts.count}" if params[:search] %>
+</div>
+<% if @posts.present? %>
 <h4 class="left">Posts:</h4><br/>
 <div><%= will_paginate @posts, :class => 'right' %></div>
 <table class="table table-hover">
@@ -44,4 +55,7 @@
   <% end %>
 </table>
 <div><%= will_paginate @posts, :class => 'right' %></div>
+<% else %>
+    <h4 class="center">Posts not found...</h4>
+<% end %>
 
