--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,15 @@
 <%= render 'layouts/header_admin' %>
+<div style="padding-top: 2%">
+  <%= form_tag users_path, :method => 'get' do %>
+      <%= text_field_tag :search, nil, :placeholder => "Search users..." %>
+      <div class="btn-group" style="margin-top: -10px;">
+        <%= submit_tag "Search", :name => nil, :class=>'btn btn-small' %>
+        <%= link_to 'Reset', users_path, :class=> 'btn btn-small btn-danger' %>
+      </div>
+  <% end %>
+  <%= "Found: #{@users.count}" if params[:search] %>
+</div>
+<% if @users.present? %>
 <h4 class="left">Users:</h4>
 <div><%= will_paginate @users, :class => 'right' %></div>
       <table class="table table-hover">
@@ -41,4 +52,7 @@
         <% end %>
       </table>
       <div><%= will_paginate @users, :class => 'right' %></div>
+<% else %>
+    <h4 class="center">Users not found...</h4>
+<% end %>
 
