Resolved problems with association

--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -5,3 +5,5 @@ Stadium name: <%= @club.stadiumname %><br/>
 Coach: <%= @club.coach %><br/>
 Year of foundation: <%= @club.year_of_foundation %><br/>
 Description: <%= @club.description %><br/>
+
+<%= render 'players/list' %>
