--- a/app/views/layouts/_header_admin.html.erb
+++ b/app/views/layouts/_header_admin.html.erb
@@ -3,9 +3,11 @@
       <%= link_to 'Posts', posts_path, :class=>'btn' %>
       <%= link_to 'Clubs', clubs_path, :class=>'btn' %>
       <%= link_to 'Users', users_path, :class=>'btn' %>
+      <%= link_to 'Games', games_path, :class=>'btn' %>
       <%= link_to 'Admins', home_path, :class=>'btn' %>
     </div>
     <div class="right">
+      <%= link_to 'New game', new_game_path, :class => 'right btn' if request.fullpath == "/games"  %>
       <%= link_to 'New club', new_club_path, :class => 'right btn' if request.fullpath == "/clubs"  %>
       <%= link_to 'New posts', new_post_path, :class => 'right btn' if request.fullpath == "/posts"  %>
     </div>
