add design for new pages games; add validates for size club_ids

--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -14,3 +14,10 @@
   border-radius: 5px;
   padding: 1%;
 }
+.game-list{
+  width: 28%;
+  height: 28%;
+  border: solid 1px #000000;
+  float: right;
+  margin-top: -35%;
+}
