--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,13 +1,14 @@
 <%= render 'layouts/header_admin' %>
-<% @games.each do |game| %>
-    <%= game.id %>
-    <%= game.location %><br/>
-    <%= game.clubs.first.clubname if !game.clubs.empty? %>
-    VS
-    <%= game.clubs.last.clubname if !game.clubs.empty? %>
 
-    <br/>
-    <%= link_to "Delete", game, method: :delete,
-                data: { confirm: "You sure?" } %>
-    <hr>
+<% if @games.present? %>
+<% @games.each do |game| %>
+    <div class="center" style="padding: 1%">
+        <%= game.clubs.first.clubname %>
+        <%= game.total %>
+        <%= game.clubs.last.clubname  %>
+        <div class="right"><%= link_to "Delete", game, method: :delete, data: { confirm: "You sure?" } %></div>
+    </div>
+<% end %>
+<% else %>
+    <h4 class="center">Games not found...</h4>
 <% end %>
