--- a/app/views/clubs/edit.html.erb
+++ b/app/views/clubs/edit.html.erb
@@ -1,15 +1,4 @@
-<script>
-    jQuery(function($){
-        $( "#datepicker" ).datepicker({
-            dateFormat: 'yy-mm-dd',
-            changeDay: true,
-            changeMonth: true,
-            changeYear: true,
-            showButtonPanel: true
-
-        });
-    });
-</script>
+<%= render "layouts/datepicker" %>
 <center><h2>Edit club</h2>
 
   <%= form_for(@club) do |club| %>
