--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,15 +1,4 @@
-<script>
-    jQuery(function($){
-        $( "#datepicker" ).datepicker({
-            dateFormat: 'yy-mm-dd',
-            changeDay: true,
-            changeMonth: true,
-            changeYear: true,
-            showButtonPanel: true
-
-        });
-    });
-</script>
+<%= render "layouts/datepicker" %>
 <div class="center">
   <h2>Edit player</h2>
 
