--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -21,3 +21,10 @@
   float: right;
   margin-top: -35%;
 }
+
+.slides{
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  background-color: white;
+}
