--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,10 +32,10 @@
       </div>
     </div>
     <div class="row-fluid">
-      <div class="span2" style="background-color: #eaeaea; border-radius: 5px; margin-top: -17px;">
-        <!--Sidebar content-->
+      <div class="span4" style="background-color: #eaeaea; border-radius: 5px; margin-top: -17px;">
+        <%= render 'games/slide' %>
       </div>
-      <div class="span10" style="background-color: #ececec; border-radius: 5px; margin-top: -17px;">
+      <div class="span8" style="background-color: #ececec; border-radius: 5px; margin-top: -17px;">
         <%= render partial: "layouts/flash_messages", flash: flash %>
         <%= yield %>
       </div>
