Add list injured

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
     <div class="row-fluid">
       <div class="span4" style="background-color: #eaeaea; border-radius: 5px; margin-top: -17px;">
         <%= render 'games/slide' %>
+        <%= render 'injureds/injured_list' %>
       </div>
       <div class="span8" style="background-color: #ececec; border-radius: 5px; margin-top: -17px;">
         <%= render partial: "layouts/flash_messages", flash: flash %>
