--- a/app/assets/stylesheets/page.css.scss
+++ b/app/assets/stylesheets/page.css.scss
@@ -28,3 +28,18 @@
   border-radius: 5px;
   background-color: white;
 }
+
+.mini-header-left-panel{
+  width: 100%;
+  height: 35px;
+  padding: 2%;
+  background-color: gray;
+  p{
+    color: white;
+  }
+}
+.injured_list{
+  width: 100%;
+  height: 300px;
+  padding: 3%;
+}
