--- a/app/views/games/_slide.html.erb
+++ b/app/views/games/_slide.html.erb
@@ -1,3 +1,6 @@
+<div class="mini-header-left-panel">
+    <p>Games:</p>
+</div>
 <div id="myCarousel" class="carousel slide">
   <!-- Carousel items -->
   <div class="carousel-inner">
