--- a/app/views/injureds/_injured_list.html.erb
+++ b/app/views/injureds/_injured_list.html.erb
@@ -6,7 +6,7 @@
         <li>
             <%= i.player_name %>
             (<%= i.injurious %>)
-           <p class="right"> End: <%= i.date_and %></p>
+           <p class="right"> End: <label class="label"><%= i.date_and %></label></p>
         </li>
     </div>
     <br/>
