--- a/app/views/layouts/_header_admin.html.erb
+++ b/app/views/layouts/_header_admin.html.erb
@@ -6,11 +6,14 @@
       <%= link_to 'Games', games_path, :class=>'btn' %>
       <%= link_to 'Admins', home_path, :class=>'btn' %>
       <%= link_to 'Injureds', injureds_path, :class=>'btn' %>
+      <%= link_to 'Another news', news_index_path, :class=>'btn' %>
+
     </div>
     <div class="right">
       <%= link_to 'New game', new_game_path, :class => 'right btn' if request.fullpath == "/games"  %>
       <%= link_to 'New club', new_club_path, :class => 'right btn' if request.fullpath == "/clubs"  %>
       <%= link_to 'New posts', new_post_path, :class => 'right btn' if request.fullpath == "/posts"  %>
       <%= link_to 'New injureds', new_injured_path, :class => 'right btn' if request.fullpath == "/injureds"  %>
+      <%= link_to 'New injureds', new_news_path, :class => 'right btn' if request.fullpath == "/news"  %>
     </div>
 </div>
