--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
       <div class="span4" style="background-color: #eaeaea; border-radius: 5px; margin-top: -17px;">
         <%= render 'games/slide' %>
         <%= render 'injureds/injured_list' %>
+        <%= render 'news/news_list' %>
       </div>
       <div class="span8" style="background-color: #ececec; border-radius: 5px; margin-top: -17px;">
         <%= render partial: "layouts/flash_messages", flash: flash %>
