--- a/app/views/layouts/_header_admin.html.erb
+++ b/app/views/layouts/_header_admin.html.erb
@@ -14,6 +14,6 @@
       <%= link_to 'New club', new_club_path, :class => 'right btn' if request.fullpath == "/clubs"  %>
       <%= link_to 'New posts', new_post_path, :class => 'right btn' if request.fullpath == "/posts"  %>
       <%= link_to 'New injureds', new_injured_path, :class => 'right btn' if request.fullpath == "/injureds"  %>
-      <%= link_to 'New injureds', new_news_path, :class => 'right btn' if request.fullpath == "/news"  %>
+      <%= link_to 'New news', new_news_path, :class => 'right btn' if request.fullpath == "/news"  %>
     </div>
 </div>
