Some design; add block with approved article

--- a/app/views/admin/home.html.erb
+++ b/app/views/admin/home.html.erb
@@ -7,7 +7,7 @@
     <th style="width:5%">ID:</th>
     <th style="width:15%">Email:</th>
     <th style='width:15%'>Created: <i class="icon-time muted"></i></th>
-    <th>Actions: <i class=" icon-wrench muted"></i></th>
+    <th style='width:15%'>Actions: <i class=" icon-wrench muted"></i></th>
   </tr>
   </thead>
   <% @admins.each do |admin| %>
