--- a/app/views/injureds/index.html.erb
+++ b/app/views/injureds/index.html.erb
@@ -9,7 +9,7 @@
         <th style="width:20%">Name:</th>
         <th style="width:15%">Injurious:</th>
         <th style='width:15%'>Date_and: <i class="icon-time muted"></i></th>
-        <th>Actions: <i class=" icon-wrench muted"></i></th>
+        <th style='width:15%'>Actions: <i class=" icon-wrench muted"></i></th>
       </tr>
       </thead>
       <% @injureds.each do |i| %>
