--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -8,7 +8,7 @@
         <th style="width:5%">ID:</th>
         <th style="width:50%">Title: <i class=" icon-list muted"></i></th>
         <th style="width:15%">Created:</th>
-        <th>Actions: <i class=" icon-wrench muted"></i></th>
+        <th style='width:15%'>Actions: <i class=" icon-wrench muted"></i></th>
       </tr>
       </thead>
       <% @news.each do |n| %>
