--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,24 +1,25 @@
 <%= render 'layouts/header_admin' %>
-
-<% if @games.present? %>
-<% @games.each do |game| %>
-    <div class="center" style="padding: 1%">
-        <div class="left">
-          <%= game.date %>
-          (<%= game.location %>)
-        </div>
-        <% if game.location == "Home" %>
-           <%= game.clubs[1].clubname %>
-           <%= game.clubs[0].clubname %>
-        <% elsif(game.location == "Away") %>
-          <%= game.clubs[0].clubname %>
-          <%= game.clubs[1].clubname %>
-        <% end %>
-        <div class="right">
-          <%= link_to "Edit ", edit_game_path(game) %>
-          <%= link_to "Delete", game, method: :delete, data: { confirm: "You sure?" } %></div>
-    </div>
-<% end %>
-<% else %>
-    <h4 class="center">Games not found...</h4>
-<% end %>
+<div style="padding-top:8%">
+    <% if @games.present? %>
+        <% @games.each do |game| %>
+            <div class="center" style="padding: 1%">
+                <div class="left">
+                  <%= game.date %>
+                  (<%= game.location %>)
+                </div>
+                <% if game.location == "Home" %>
+                   <%= game.clubs[1].clubname %>
+                   <%= game.clubs[0].clubname %>
+                <% elsif(game.location == "Away") %>
+                  <%= game.clubs[0].clubname %>
+                  <%= game.clubs[1].clubname %>
+                <% end %>
+                <div class="right">
+                  <%= link_to "Edit ", edit_game_path(game) %>
+                  <%= link_to "Delete", game, method: :delete, data: { confirm: "You sure?" } %></div>
+            </div>
+       <% end %>
+    <% else %>
+        <h4 class="center">Games not found...</h4>
+    <% end %>
+</div>
