--- a/app/views/layouts/_header_admin.html.erb
+++ b/app/views/layouts/_header_admin.html.erb
@@ -1,21 +1,20 @@
 <div class="admin-header">
-    <div class="btn-group" data-toggle="buttons-checkbox"  data-toggle-name="checkbox_group">
-      <%= link_to 'Posts', posts_path, :class=>'btn' %>
-      <%= link_to 'Clubs', clubs_path, :class=>'btn' %>
-      <%= link_to 'Users', users_path, :class=>'btn' %>
-      <%= link_to 'Games', games_path, :class=>'btn' %>
-      <%= link_to 'Admins', home_path, :class=>'btn' %>
-      <%= link_to 'Injureds', injureds_path, :class=>'btn' %>
-      <%= link_to 'Another news', news_index_path, :class=>'btn' %>
-      <%= link_to 'Article', articles_path, :class=>'btn' %>
-
-    </div>
-    <div class="right">
-      <%= link_to 'New game', new_game_path, :class => 'right btn' if request.fullpath == "/games"  %>
-      <%= link_to 'New club', new_club_path, :class => 'right btn' if request.fullpath == "/clubs"  %>
-      <%= link_to 'New posts', new_post_path, :class => 'right btn' if request.fullpath == "/posts"  %>
-      <%= link_to 'New injureds', new_injured_path, :class => 'right btn' if request.fullpath == "/injureds"  %>
-      <%= link_to 'New news', new_news_path, :class => 'right btn' if request.fullpath == "/news"  %>
-      <%= link_to 'New article', new_article_path, :class => 'right btn' if request.fullpath == "/articles"  %>
+    <div class="btn-group" data-toggle="buttons-checkbox"  data-toggle-name="checkbox_group" style="padding: 1%">
+      <%= link_to 'Posts', posts_path, :class=>'btn btn-small' %>
+      <%= link_to 'Clubs', clubs_path, :class=>'btn btn-small' %>
+      <%= link_to 'Users', users_path, :class=>'btn btn-small' %>
+      <%= link_to 'Games', games_path, :class=>'btn btn-small' %>
+      <%= link_to 'Admins', home_path, :class=>'btn btn-small' %>
+      <%= link_to 'Injureds', injureds_path, :class=>'btn btn-small' %>
+      <%= link_to 'Another news', news_index_path, :class=>'btn btn-small' %>
+      <%= link_to 'Article', articles_path, :class=>'btn btn-small' %>
     </div>
 </div>
+    <div class="right" style="padding: 1%">
+      <%= link_to 'New game', new_game_path, :class => 'right btn btn-small' if request.fullpath == "/games"  %>
+      <%= link_to 'New club', new_club_path, :class => 'right btn btn-small' if request.fullpath == "/clubs"  %>
+      <%= link_to 'New posts', new_post_path, :class => 'right btn btn-small' if request.fullpath == "/posts"  %>
+      <%= link_to 'New injureds', new_injured_path, :class => 'right btn btn-small' if request.fullpath == "/injureds"  %>
+      <%= link_to 'New news', new_news_path, :class => 'right btn btn-small' if request.fullpath == "/news"  %>
+      <%= link_to 'New article', new_article_path, :class => 'right btn btn-small' if request.fullpath == "/articles"  %>
+    </div>
