--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,14 +33,17 @@
       </div>
     </div>
     <div class="row-fluid">
-      <div class="span4" style="background-color: #eaeaea; border-radius: 5px; margin-top: -17px;">
+      <div class="span3" style="background-color: #eaeaea; border-radius: 5px; margin-top: -17px;">
         <%= render 'games/slide' %>
         <%= render 'injureds/injured_list' %>
         <%= render 'news/news_list' %>
       </div>
-      <div class="span8" style="background-color: #ececec; border-radius: 5px; margin-top: -17px;">
+      <div class="span6" style="background-color: #ececec; border-radius: 5px; margin-top: -17px;">
         <%= render partial: "layouts/flash_messages", flash: flash %>
         <%= yield %>
+      </div>
+      <div class="span3" style="background-color: #eaeaea; border-radius: 5px; margin-top: -17px;">
+        <%= render 'articles/approved_list' %>
       </div>
     </div>
   </div>
