--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,22 +15,28 @@
       <table class="table table-hover">
         <thead>
         <tr>
-          <th style="width:5%">ID:</th>
           <th style="width:20%">Name:</th>
           <th style="width:15%">Email:</th>
-          <th style='width:15%'>Created: <i class="icon-time muted"></i></th>
-          <th style="width:10%">Banned:<i class=" icon-wrench muted"></i></th>
+          <th style='width:15%'>Created:</th>
+          <th style="width:10%">Banned:</th>
           <th>Status:</th>
-          <th>Actions: <i class=" icon-wrench muted"></i></th>
+          <th>Actions:</th>
         </tr>
         </thead>
         <% @users.each do |user| %>
             <tbody>
             <tr>
-              <td><%= user.id %></td>
               <td><%= link_to user.name, user %></td>
-              <td><%= user.email %></td>
-              <td><%= user.created_at.to_date %></td>
+              <td>
+                <div class="small-text">
+                    <%= user.email %>
+                </div>
+              </td>
+              <td>
+                <div class="small-text">
+                    <%= user.created_at.to_date %>
+                </div>
+              </td>
               <td>
                 <% if user.banned == false %>
                     <%= link_to 'Ban',  user_path(user, :banned => true), :method => :put %>
